// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should render default correctly 1`] = `
<label class="fx-radio fx-horizontal-hairline"><input class="fx-radio_input fx-form-input" type="radio" name="" value="">
  <div class="fx-radio_box">
    <fx-icon-stub class="fx-radio_icon" icon="CircleOutlined"></fx-icon-stub>
    <fx-icon-stub class="fx-radio_icon fx-radio_checked-icon" icon="CircleOutlined"></fx-icon-stub>
    <!--v-if-->
  </div>
</label>
`;

exports[`Radio should render prop disabled=true correctly 1`] = `
<label class="fx-radio fx-horizontal-hairline disabled"><input class="fx-radio_input fx-form-input" type="radio" name="" value="" disabled="">
  <div class="fx-radio_box">
    <fx-icon-stub class="fx-radio_icon" icon="CircleOutlined"></fx-icon-stub>
    <fx-icon-stub class="fx-radio_icon fx-radio_checked-icon" icon="CircleOutlined"></fx-icon-stub>
    <!--v-if-->
  </div>
</label>
`;

exports[`RadioGroup should render 2 Radio slot correctly 1`] = `<div class="fx-radio-group vertical"></div>`;

exports[`RadioGroup should render prop disabled=true correctly 1`] = `<div class="fx-radio-group vertical disabled"></div>`;
